Apply patch by David Benjamin fixing LTR layout of QToolBox he gave me two options and i chose the one that mirrored the sloping divider. It also fixes icons from appearing twice in QToolBox

Thanks David

BUG:157471
BUG:155133

svn path=/trunk/KDE/kdebase/runtime/kstyles/; revision=772648